# growbot_simulations

./: README.md  diff.txt]  growbot.gazebo  nc_teleop.py  needed_packages  package.xml
blender/: aruco0.blend  aruco0.dae
config/: joints.yaml
devel/: .catkin
devel/lib/kinect2_bridge/: kinect2_bridge
devel/lib/kinect2_calibration/: kinect2_calibration
devel/lib/kinect2_viewer/: kinect2_viewer
devel/lib/pkgconfig/: arduino_bridge.pc  kinect2_bridge.pc  kinect2_calibration.pc  kinect2_registration.pc  kinect2_viewer.pc  receive_test.pc  send_test.pc
devel/lib/receive_test/: listener.py
devel/share/arduino_bridge/cmake/: arduino_bridgeConfig.cmake
devel/share/kinect2_bridge/cmake/: kinect2_bridgeConfig.cmake
devel/share/send_test/cmake/: send_testConfig.cmake
launch/: aruco_marker_finder.launch  aruco_marker_finder_gazebo.launch  garden_world.launch  garden_world_old.launch  gazebo.launch  nc_teleop.launch  rviz.launch  spawn_growbot.launch  test_aruco.launch
models/aruco_visual_marker_10/: model.sdf
models/heightmap/: model.config  model.sdf
prev/: CMakeLists.txt  package.xml
prev/launch/: aruco_marker_finder_irl.launch  garden_world.launch  rviz.launch  spawn_growbot.launch  usb_cam_stream_publisher.launch
prev/rviz/: growbot.rviz
prev/urdf/: wheel.xacro
prev/worlds/: garden.world  garden_with_tags.world
rviz/: growbot.rviz  growbot0.rviz  urdf.rviz
src/: teleop.py
src/receive_test/: CMakeLists.txt
src/send_test/: CMakeLists.txt
urdf/: camera.xacro  growbot.gazebo  main.xacro  plugins.xacro  wheel.xacro
worlds/: garden.world
(+5 files in other folders)
