<?xml version="1.0"?>
<package format="2">
  <name>growbot_simulations</name>
  <version>1.0.0</version>
  <description>The growbot_simulations package contains the code nessesary to simulate the Growbot using Gazebo.</description>
  <maintainer email="wilsonjholmes@gmail.com">Wilson Holmes</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend><!-- ? Do i need this?-->
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
